# Raytracing

./: CMakeLists.txt  README.md
Resources/: fshader.frag  vshader.vert
ext/DevIL/: CMakeLists.txt  Makefile  cmake_install.cmake
ext/DevIL/src-IL/: IL.pc  Makefile  cmake_install.cmake
ext/DevIL/src-IL/include/: config.h
ext/glfw/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
ext/glfw/.github/: CONTRIBUTING.md
ext/glfw/CMake/modules/: FindMir.cmake  FindVulkan.cmake
ext/glfw/docs/: CMakeLists.txt  Doxyfile.in  build.dox  compat.dox  compile.dox  context.dox  input.dox  internal.dox  intro.dox  monitor.dox  moving.dox  news.dox  quick.dox  vulkan.dox  window.dox
ext/glfw/examples/: CMakeLists.txt  gears.c  wave.c
ext/glfw/include/GLFW/: glfw3.h
ext/glfw/src/: CMakeLists.txt  Makefile  cmake_install.cmake  cocoa_init.m  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_window.m  context.c  egl_context.h  glfw3.pc  glfw_config.h  glfw_config.h.in  glx_context.h  init.c  input.c  internal.h  linux_joystick.c  mir_init.c  mir_monitor.c  mir_platform.h  mir_window.c  monitor.c  null_init.c  null_monitor.c  null_platform.h  null_window.c  osmesa_context.c  osmesa_context.h  vulkan.c  win32_init.c  win32_joystick.c  win32_platform.h  win32_window.c  window.c  wl_init.c  wl_monitor.c  wl_platform.h  wl_window.c  x11_init.c  (+2 more)
ext/glfw/tests/: CMakeLists.txt  clipboard.c  events.c  gamma.c  glfwinfo.c  iconify.c  joysticks.c  monitors.c  sharing.c  tearing.c  title.c  vulkan.c
ext/glm/: CMakeLists.txt  manual.md  readme.md
ext/glm/glm/detail/: _noise.hpp  glm.cpp  setup.hpp
ext/glm/glm/gtc/: color_space.inl  constants.hpp  (+8 more)
src/: camera.cpp  camera.h  color.cpp  color.h  cylinder.cpp  cylinder.h  lightsource.h  main.cpp  material.cpp  material.h  object.h  ray.cpp  ray.h  renderengine.cpp  renderengine.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  utility.cpp  utility.hpp  vector3D.h  world.cpp  world.h
(+85 files in other folders)
